# yadro-tape-flex

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_test.cpp
ConfigReader/: ConfigReader.cpp  ConfigReader.hpp  Exceptions.hpp  TestConfigReader.cpp
ConfigReader/test/: config.txt
TapeDevice/FileTapeDevice/: FileTapeDevice.cpp  FileTapeDevice.hpp
TapeDevice/Interface/: ITapeDevice.hpp
TapeSorter/: TapeSorter.cpp  TapeSorter.hpp  Utils.cpp
TapeSorter/Strategies/: ISortStrategy.hpp  SortNotEnoughMemoryStrategy.cpp
src/: main.cpp  main_test.cpp
src/ConfigReader/: ConfigReader.cpp
src/TapeDevice/Interface/: Exceptions.hpp  ITapeDevice.hpp
src/TapeSorter/: TapeSorter.cpp  Utils.cpp  Utils.hpp
src/TapeSorter/Strategies/: SortEnoughMemoryStrategy.cpp  SortEnoughMemoryStrategy.hpp  SortNotEnoughMemoryStrategy.cpp  SortNotEnoughMemoryStrategy.hpp  SortWithoutMemoryStrategy.cpp  SortWithoutMemoryStrategy.hpp
test_cases/little_memory_case/: config.txt
test_cases/lot_memory_case/: config.txt
test_cases/no_memory_case/: config.txt
